--- a/SMPEditor/SMPEditor/SMPEditor.csproj
+++ b/SMPEditor/SMPEditor/SMPEditor.csproj
@@ -37,9 +37,8 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="NiDump, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Release\NiDump.dll</HintPath>
+    <Reference Include="NiDump">
+      <HintPath>..\..\..\Release\NiDump.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -49,12 +48,12 @@
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
-    <Reference Include="Yu5h1Tools.DevelopmentKit">
+    <Reference Include="Yu5h1Tools.DevelopmentKit, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\..\Yu5h1Tools\Yu5h1Tools.DevelopmentKit\Yu5h1Tools.DevelopmentKit\bin\Release\Yu5h1Tools.DevelopmentKit.dll</HintPath>
     </Reference>
-    <Reference Include="Yu5h1Tools.WPFExtension, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\Yu5h1Tools\Yu5h1Tools.WPFExtension\Yu5h1Tools.WPFExtension\bin\Release\Yu5h1Tools.WPFExtension.dll</HintPath>
+    <Reference Include="Yu5h1Tools.WPFExtension">
+      <HintPath>..\..\..\..\..\..\Yu5h1Tools\WPFExtension\Yu5h1Tools.WPFExtension\bin\Release\Yu5h1Tools.WPFExtension.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
