--- a/SMPEditor/SMPEditor/SMPEditor.csproj
+++ b/SMPEditor/SMPEditor/SMPEditor.csproj
@@ -61,6 +61,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="TextBlockHighlighter.cs" />
     <Compile Include="TreeViewEx.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
